@@ -1,3 +1,8 @@
+2006-09-14  Per Bothner  <per@bothner.com>
+
+	* RunXQTS.java (endGroup): Add handing of <input-URI>.
+	(<init>): Update expected failures.
+
 2006-09-13  Per Bothner  <per@bothner.com>
 
 	* RunXQTS.java (main): Update XMLPrinter construction.
